--- a/templates/base.twig
+++ b/templates/base.twig
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{ asset("assets/css/src/default-rtl.css") }}">
     {% endif %}
     <meta name="robots" content="noindex, nofollow">
-    <link rel="preload" href="{{ asset('js/bundle.js') }}" as="script">
+    <link rel="preload" href="{{ asset('assets/js/bundle.js') }}" as="script">
     {% block preload %}{% endblock %}
   </head>
   <body id="{{ templateId }}">
@@ -27,7 +27,7 @@
     <div id="foot">
       {% block footer %}{% include "_footer.twig" %}{% endblock %}
     </div>
-    <script src="{{ asset('js/bundle.js') }}"></script>
+    <script src="{{ asset('assets/js/bundle.js') }}"></script>
     {% block postload %}{% endblock %}
   </body>
 </html>
