Add missing styling for "logged in as administrator" message.
This made it flow in with the regular text instead of standing out.

--- a/www/resources/default.css
+++ b/www/resources/default.css
@@ -257,6 +257,11 @@ div.caution {
 th.rowtitle {
     text-align: left;
 }
+.youareadmin {
+    border: 1px solid #aaa;
+    margin-left: 1em;
+    padding: 5px;
+}
 .enablebox table {
     border: 1px solid #eee;
     margin-left: 1em;
