--- a/templates/selectidp-links.twig
+++ b/templates/selectidp-links.twig
@@ -4,42 +4,65 @@
 {% block content %}
     <h2>{{ pagetitle }}</h2>
 
+    {% if idplist|length == 0 %}
+    <div class="message-box message-box-error">{{ "No identity providers found. Cannot continue." | trans }}</div>
+    {% else %}
+
     <p>{{ "Please select the identity provider where you want to authenticate:" | trans }}</p>
     <form method="get" action="{{ urlpattern }}">
         <input type="hidden" name="entityID" value="{{ entityID }}">
         <input type="hidden" name="return" value="{{ return }}">
         <input type="hidden" name="returnIDParam" value="{{ returnIDParam }}">
         {% if rememberenabled %}
-            <p><input type="checkbox" name="remember" id="remember" value="1">
-            <label for="remember">{{ 'Remember my choice' | trans }}</label></p>
+        <div class="pure-control-group">
+            <label for="remember">
+                <input type="checkbox" name="remember" id="remember" value="1"{% if rememberchecked %} checked{% endif %}>
+                {{ 'Remember my choice' | trans }}
+            </label>
+        </div>
         {% endif %}
 
         {% for idpentry in idplist %}
         {% if idpentry.entityid == preferredidp %}
-                <div class="preferredidp">
+                <div class="idp preferredidp pure-g">
+                <div class="pure-u-1-8">
+                    <button type="submit" class="pure-button pure-button-primary" name="idp_{{ idpentry.entityid }}">{{'Select'|trans}}</button>
+                </div>
                 {% if idpentry.iconurl is defined %}
-                    <img class="float-l" src="{{ idpentry.iconurl }}">
+                    <div class="pure-u-1-8">
+                        <img src="{{ idpentry.iconurl }}" alt="">
+                    </div>
                 {% endif %}
-                <h3><i class="fa fa-star"></i> {{ idpentry.name }}</h3>
-                {% if idpentry.description is defined %}
-                    <p>{{ idpentry.description }}</p>
+                <div class="pure-u-7-8">
+                <span class="idpname"><i class="fa fa-star"></i> {{ idpentry.name }}</span>
+                {% if idpentry.description is defined and idpentry.description != idpentry.name %}
+                    <br><span class="idpdesc">{{ idpentry.description }}</span>
                 {% endif %}
-                <button type="submit" class="btn" name="idp_{{ idpentry.entityid }}">{{'Select'|trans}}</button>
+                </div>
                 </div>
         {% endif %}
         {% endfor %}
 
         {% for idpentry in idplist %}
         {% if idpentry.entityid != preferredidp %}
+                <div class="idp pure-g">
+                <div class="pure-u-1-8">
+                    <button type="submit" class="pure-button" name="idp_{{ idpentry.entityid }}">{{'Select'|trans}}</button>
+                </div>
                 {% if idpentry.iconurl is defined %}
-                    <img class="float-l" src="{{ idpentry.iconurl }}">
+                    <div class="pure-u-1-8">
+                        <img src="{{ idpentry.iconurl }}" alt="">
+                    </div>
                 {% endif %}
-                <h3>{{ idpentry.name }}</h3>
-                {% if idpentry.description is defined %}
-                    <p>{{ idpentry.description }}</p>
+                <div class="pure-u-7-8">
+                <span class="idpname">{{ idpentry.name }}</span>
+                {% if idpentry.description is defined and idpentry.description != idpentry.name %}
+                    <br><span class="idpdesc">{{ idpentry.description }}</span>
                 {% endif %}
-                <button type="submit" class="btn" name="idp_{{ idpentry.entityid }}">{{'Select'|trans}}</button>
+                </div>
+                </div>
         {% endif %}
         {% endfor %}
     </form>
+    {% endif %}
 {% endblock %}
