Fix for undefined Twig-var

--- a/modules/core/templates/loginuserpass.twig
+++ b/modules/core/templates/loginuserpass.twig
@@ -118,7 +118,7 @@
             </button>
         </form>
     </div><!--center-->
-    {% if links -%}
+    {% if links is defined -%}
     <ul>
         {% for link in links -%}
         <li><a href="{{ link.href }}">{{ link['text']|trans }}</a></li>
