Reimplement attribute presentation with translation and without HTML generation in controller

--- a/modules/admin/templates/status.twig
+++ b/modules/admin/templates/status.twig
@@ -8,9 +8,29 @@
     <p>{% trans %}Hi, this is the status page of SimpleSAMLphp. Here you can see if your session is timed out, how long
      it lasts until it times out and all the attributes that are attached to your session.{% endtrans %}</p>
 
+    {% if remaining %}
+        <p>{% trans %}Your session is valid for {{ remaining }} seconds from now.{% endtrans %}</p>
+    {% endif %}
+
     <h2>{{ '{status:attributes_header}'|trans }}</h2>
 
-    {{ attributesHtml|raw }}
+    {% set items = attributes %}
+
+{% embed '_table.twig' -%}
+
+    {% block namecol -%}
+    {% set translated = name|trans %}
+    <td class="attrname">{% if translated != name %} {{ translated }} <br>{% endif %} <samp>{{ name }}</samp></td>
+    {% endblock %}
+
+
+    {% block value -%}
+    {% if name =='jpegPhoto'-%}
+        <img src="data:image/jpeg;base64,{{ value }}" alt="{% trans %}Content of jpegPhoto attribute{% endtrans %}">
+    {% else %}{{ value }}{% endif -%}
+    {% endblock %}
+
+{%- endembed %}
 
     {%- if nameid or authData %}
 
