--- a/templates/base.twig
+++ b/templates/base.twig
@@ -1,4 +1,4 @@
-{% spaceless %}
+{% apply spaceless %}
 <!DOCTYPE html>
 <html lang="{{ currentLanguage }}" xml:lang="{{ currentLanguage }}">
   <head>
@@ -31,4 +31,4 @@
     {% block postload %}{% endblock %}
   </body>
 </html>
-{% endspaceless %}
+{% endapply %}
