--- a/modules/core/templates/loginuserpass.twig
+++ b/modules/core/templates/loginuserpass.twig
@@ -10,10 +10,7 @@
     {%- if not isProduction %}
 
     <div class="message-box warning">
-      {% trans %}You are now accessing a pre-production system. This authentication setup
-      {#- #} is for testing and pre-production verification only. If someone sent you
-      {#- #} a link that pointed you here, and you are not <i>a tester</i> you
-      {#- #} probably got the wrong link, and should <b>not be here</b>.{% endtrans %}
+      {% trans %}You are now accessing a pre-production system. This authentication setup is for testing and pre-production verification only. If someone sent you a link that pointed you here, and you are not <i>a tester</i> you probably got the wrong link, and should <b>not be here</b>.{% endtrans %}
     </div>
     {% endif -%}
     {% if errorcode -%}
