fixed placeholders in translation strings

--- a/modules/admin/templates/status.twig
+++ b/modules/admin/templates/status.twig
@@ -9,7 +9,9 @@
      it lasts until it times out and all the attributes that are attached to your session.{% endtrans %}</p>
 
     {% if remaining %}
-        <p>{% trans %}Your session is valid for {{ remaining }} seconds from now.{% endtrans %}</p>
+        <p>{% trans with {
+            '%remaining%': remaining
+        } %}Your session is valid for %remaining% seconds from now.{% endtrans %}</p>
     {% endif %}
 
     <h2>{{ '{status:attributes_header}'|trans }}</h2>
