removed twig comments from translation strings

--- a/modules/admin/templates/federation.twig
+++ b/modules/admin/templates/federation.twig
@@ -56,8 +56,7 @@
               <div id="xml-{{ key }}" class="code-box-content xml">{{ set.metadata }}</div>
             </dd>
             <dt>{% trans %}SimpleSAMLphp Metadata{% endtrans %}</dt>
-            <dd>{% trans %}Use this if you are using a SimpleSAMLphp entity on
-              {#- #} the other side:{% endtrans %}</dd>
+            <dd>{% trans %}Use this if you are using a SimpleSAMLphp entity on the other side:{% endtrans %}</dd>
             <dd class="code-box hljs">
               <div class="pure-button-group top-right-corner">
                 <a class="pure-button copy hljs" data-clipboard-target="#php-{{ key }}"
