Fix part of translations

--- a/modules/core/templates/no_state.twig
+++ b/modules/core/templates/no_state.twig
@@ -1,8 +1,8 @@
-<h3>{{ '{core:no_state:suggestions}'|trans }}</h3>
+<h3>{{ 'Suggestions for resolving this problem:'|trans }}</h3>
 <ul>
-    <li>{{ '{core:no_state:suggestion_badlink}'|trans }}</li>
-    <li>{{ '{core:no_state:suggestion_goback}'|trans }}</li>
-    <li>{{ '{core:no_state:suggestion_closebrowser}'|trans }}</li>
+    <li>{{ 'Check that the link you used to access the web site is correct.'|trans }}</li>
+    <li>{{ 'Go back to the previous page and try again.'|trans }}</li>
+    <li>{{ 'Close the web browser, and try again.'|trans }}</li>
 </ul>
 
 <h3>{{ '{core:no_state:causes}'|trans }}</h3>
