--- a/modules/core/templates/no_cookie.twig
+++ b/modules/core/templates/no_cookie.twig
@@ -1,10 +1,9 @@
-
-{% set pagetitle = '{core:no_cookie:header}'|trans %}
+{% set pagetitle = 'Missing cookie'|trans %}
 {% extends "base.twig" %}
 
 {% block content %}
-    <h2>{{ '{core:no_cookie:header}'|trans }}</h2>
-    <p>{{ '{core:no_cookie:description}'|trans }}</p>
+    <h2>{{ 'Missing cookie'|trans }}</h2>
+    <p>{{ 'You appear to have disabled cookies in your browser. Please check the settings in your browser, and try again.'|trans }}</p>
     {% if retryURL is not null %}
     <ul>
         <li><a href="{{ retryURL|escape('html') }}" id="retry">{{ 'Retry'|trans }}</a></li>
