Migrate translations for missing state template

--- a/modules/core/templates/no_state.twig
+++ b/modules/core/templates/no_state.twig
@@ -5,10 +5,10 @@
     <li>{{ 'Close the web browser, and try again.'|trans }}</li>
 </ul>
 
-<h3>{{ '{core:no_state:causes}'|trans }}</h3>
+<h3>{{ 'This error may be caused by:'|trans }}</h3>
 <ul>
-    <li>{{ '{core:no_state:cause_badlink}'|trans }}</li>
-    <li>{{ '{core:no_state:cause_backforward}'|trans }}</li>
-    <li>{{ '{core:no_state:cause_openbrowser}'|trans }}</li>
-    <li>{{ '{core:no_state:cause_nocookie}'|trans }}</li>
+    <li>{{ 'The link used to get here was bad, perhaps a bookmark.'|trans }}</li>
+    <li>{{ 'Using the back and forward buttons in the web browser.'|trans }}</li>
+    <li>{{ 'Opened the web browser with tabs saved from the previous session.'|trans }}</li>
+    <li>{{ 'Cookies may be disabled in the web browser.'|trans }}</li>
 </ul>
