--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -47,12 +47,12 @@
       <div class="v-center language-bar">
         <form id="language-form" class="pure-form" method="get">
           {% if not hideLanguageBar %}
-          <div id="languagebar">
+          <div id="languageform">
             {% for name, value in queryParams %}
               {% if value %}
-            <input type="hidden" name="{{ name }}" value="{{ value }}" />
+            <input type="hidden" name="{{ name }}" value="{{ value }}">
               {% else %}
-            <input type="hidden" name="{{ name }}" />
+            <input type="hidden" name="{{ name }}">
               {% endif %}
             {% endfor %}
             <select  class="pure-input-1-4 language-menu selectize" name="language" id="language-selector">
