--- a/templates/_footer.twig
+++ b/templates/_footer.twig
@@ -1,4 +1,4 @@
-<div id="footer">
+<footer id="footer">
   <div class="wrap">
     <div class="center copyrights">&copy; 2007-{{ year }} <a href="https://simplesamlphp.org/">SimpleSAMLphp</a>
     </div>
@@ -8,4 +8,4 @@
       </div>
     </div>
   </div>
-</div>
+</footer>
