--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -1,4 +1,4 @@
-<div id="header">
+<header id="header">
   <div class="wrap">
     <div class="left">
       <div class="v-center logo-header">
@@ -75,5 +75,5 @@
       </div>{# language bar #}
     </div>{# show-for-large #}
   </div>{# wrap #}
-</div>{# header #}
+</header>
 
