--- a/templates/auth_status.twig
+++ b/templates/auth_status.twig
@@ -71,7 +71,7 @@
 
     <dl>
       <dt>{% trans %}Debug information to be used by your support staff{% endtrans %}</dt>
-      {%- embed "includes/expander.twig" %}
+      <dd>{%- embed "includes/expander.twig" %}
         {%- block content %}
 
         <dl>
@@ -101,6 +101,7 @@
         {%- endblock content %}
       {%- endembed %}
 
+     </dd>
     </dl>
     <br>
 
