--- a/templates/base.twig
+++ b/templates/base.twig
@@ -17,12 +17,14 @@
   <body id="{{ templateId }}">
     <div id="layout">
     {% block header %}{% include "_header.twig" %}{% endblock %}
+      <main>
       <div id="content">
         <div class="wrap">
           {% block contentwrapper %}{% block content %}{% endblock %}{% endblock contentwrapper %}
         </div>
       </div>{# content #}
       <div id="push"></div>
+      </main>
     </div>{# layout #}
     <div id="foot">
       {% block footer %}{% include "_footer.twig" %}{% endblock %}
