--- a/templates/error.twig
+++ b/templates/error.twig
@@ -42,7 +42,7 @@
         <form action="{{ errorReportAddress }}" class="pure-form" method="post">
             <p>{{ '{errors:report_text}' | trans }}</p>
             <label for="email">{{ '{errors:report_email}' | trans }}</label>
-                <input type="email" name="email" id="email" class="edge" value="{{ email }}" />
+                <input type="email" name="email" id="email" class="edge" size="50" value="{{ email }}">
 
             <textarea class="text-area edge" name="text" rows="6" cols="50" placeholder="{{ '{errors:report_explain}' | trans }}" required></textarea>
         <p class="center">
