--- a/modules/core/templates/loginuserpass.twig
+++ b/modules/core/templates/loginuserpass.twig
@@ -79,7 +79,7 @@
                 <div class="pure-control-group">
                     <label for="organization">{{ 'Organization'|trans }}</label>
                     <div class="pure-select right pure-input-1-2 pure-input-sm-1-1">
-                        <select name="organization" class="selectize" id="organization" tabindex="3">
+                        <select name="organization" class="" id="organization" tabindex="3">
                             {{ selectedOrg ?: null }}
                             {%- for id, orgDesc in organizations -%}
                                 {% if id == selectedOrg -%}
