--- a/modules/cron/templates/croninfo.twig
+++ b/modules/cron/templates/croninfo.twig
@@ -13,10 +13,9 @@
     <div class="code-box code-box-content">
         <code id="cronlist">
         <br />
-        {% for url in urls %}
-            # {{ 'Run cron:'|trans }} [{{ url.tag }}]<br />
-            {{ url.int }} curl --silent "{{ url.exec_href }}" > /dev/null 2>&amp;1<br />
-        {% endfor %}
+        {%- for url in urls -%}
+        # {{ 'Run cron:'|trans }} [{{ url.tag }}]<br />{{ url.int }} curl --silent "{{ url.exec_href }}" > /dev/null 2>&amp;1<br /><br />
+        {%- endfor -%}
         <br />
         </code>
     </div>
