--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -58,7 +58,7 @@
             <select aria-label="{% trans %}Language{% endtrans %}" class="pure-input-1-4 language-menu" name="language" id="language-selector">
             {% for key, lang in languageBar %}
               {% if key == currentLanguage %}
-              <option value="{{ key }}" selected="selected">&#xf0ac;  {{ lang.name }}</option>
+              <option value="{{ key }}" selected="selected">&#127760; {{ lang.name }}</option>
               {% else %}
               <option value="{{ key }}">{{ lang.name }}</option>
               {% endif %}
