--- a/templates/includes/expander.twig
+++ b/templates/includes/expander.twig
@@ -11,3 +11,6 @@
 
           </div>
         </div>
+{% block postload %}
+    <script src="{{ asset('js/expander.js') }}"></script>
+{% endblock %}
