--- a/www/assets/css/src/default-rtl.css
+++ b/www/assets/css/src/default-rtl.css
@@ -36,11 +36,8 @@ div.caution {
 th.rowtitle {
     text-align: right;
 }
-.enablebox table {
-    margin-right: 1em;
-}
-.enablebox.mini table {
-    float: left;
+ul.modulelist {
+    column-count: 3;
 }
 .enablebox tr td {
     padding: .5px .5em 1px 1em;
