--- a/templates/error.twig
+++ b/templates/error.twig
@@ -38,21 +38,21 @@
     {# Add error report submit section if we have a valid technical contact. 'errorreportaddress' will only be set if
        the technical contact email address has been set. #}
     {% if errorReportAddress is defined -%}
-        <h2>{{ '{errors:report_header}' | trans }}</h2>
+        <h2>{{ 'Report errors' | trans }}</h2>
         <form action="{{ errorReportAddress }}" class="pure-form" method="post">
-            <p>{{ '{errors:report_text}' | trans }}</p>
-            <label for="email">{{ '{errors:report_email}' | trans }}</label>
+            <p>{{ 'Optionally enter your email address, for the administrators to be able contact you for further questions about your issue:' | trans }}</p>
+            <label for="email">{{ 'E-mail address:' | trans }}</label>
                 <input type="email" name="email" id="email" class="edge" size="50" value="{{ email }}">
 
-            <textarea class="text-area edge" name="text" rows="6" cols="50" placeholder="{{ '{errors:report_explain}' | trans }}" required></textarea>
+            <textarea class="text-area edge" name="text" rows="6" cols="50" placeholder="{{ 'Explain what you did when this error occurred...' | trans }}" required></textarea>
         <p class="center">
             <input type="hidden" name="reportId" value="{{ error.reportId }}" />
-            <input type="submit" name="send" class="pure-button pure-button-red" value="{{ '{errors:report_submit}' | trans }}" />
+            <input type="submit" name="send" class="pure-button pure-button-red" value="{{ 'Send error report' | trans }}" />
         </p>
         </form>
     {%- endif %}
 
-    <h2>{{ '{errors:howto_header}' | trans }}</h2>
-    <p>{{ '{errors:howto_text}' | trans }}</p>
+    <h2>{{ 'How to get help' | trans }}</h2>
+    <p>{{ 'This error probably is due to some unexpected behaviour or to misconfiguration of SimpleSAMLphp. Contact the administrator of this login service, and send them the error message above.' | trans }}</p>
 
 {% endblock %}
