--- a/templates/_header.twig
+++ b/templates/_header.twig
@@ -1,6 +1,6 @@
 <header id="header">
   <div class="wrap">
-    <div class="left">
+    <div class="logospace">
       <div class="v-center logo-header">
         <div id="logo">
         {% if header == 'SimpleSAMLphp' %}
@@ -15,7 +15,7 @@
       </div>
     </div>
     {% if not hideLanguageBar %}
-    <div class="right">
+    <div class="menuspace">
       <a href="" id="menuLink" class="menu-link hide-for-large">
         <span class="fa fa-globe fa-2x" aria-hidden="true"></span>
       </a>
@@ -43,7 +43,7 @@
       </div>
     </div>
     {% endif %}
-    <div class="right show-for-large">
+    <div class="menuspace show-for-large">
       <div class="v-center language-bar">
         <form id="language-form" class="pure-form" method="get">
           {% if not hideLanguageBar %}
