--- a/modules/admin/templates/show_metadata.twig
+++ b/modules/admin/templates/show_metadata.twig
@@ -9,7 +9,7 @@
                 title="{% trans %}Copy to clipboard{% endtrans %}"><span class="fa fa-copy"></span></a>
         </div>
         <div id="metadata" class="code-box-content php">
-            {#- #}$metadata["{{ entityid }}"] => {{ metadata|escape }};{# -#}
+            {#- #}$metadata["{{ entityID }}"] => {{ metadata|escape }};{# -#}
         </div>
     </div>
     <div class="center">
