Update url in docs for modern paths and do not silence all curl output
In principle the cron task should only output on error which you
want to know about. Add curl -s to disable curl progressbar but -S
to do show any http errors that occurred.

--- a/modules/cron/templates/croninfo.twig
+++ b/modules/cron/templates/croninfo.twig
@@ -14,7 +14,7 @@
         <code id="cronlist">
         <br />
         {%- for url in urls -%}
-        # {{ 'Run cron:'|trans }} [{{ url.tag }}]<br />{{ url.int }} curl --silent "{{ url.exec_href }}" > /dev/null 2>&amp;1<br /><br />
+        # {{ 'Run cron:'|trans }} [{{ url.tag }}]<br />{{ url.int }} curl -sS "{{ url.exec_href }}"<br /><br />
         {%- endfor -%}
         <br />
         </code>
