--- a/resources/css/default.scss
+++ b/resources/css/default.scss
@@ -1,5 +1,6 @@
 @import "../../node_modules/reset-css/sass/_reset.scss";
 @import "../../node_modules/purecss/build/pure.css";
+$fa-font-path: '../fonts/';
 @import "../../node_modules/\@fortawesome/fontawesome-free/scss/fontawesome";
 @import "../../node_modules/\@fortawesome/fontawesome-free/scss/solid";
 @import "../../node_modules/highlight.js/styles/zenburn.css";
