Migrate old www-script to controller

--- a/modules/admin/templates/logout.twig
+++ b/modules/admin/templates/logout.twig
@@ -7,6 +7,6 @@
     <h3>{% trans %}You have been logged out.{% endtrans %}</h3>
     <br>
     {% if text %}
-    <p><a href="{{ link }}">{{ text|trans }}</a></p>
+    <p><a href="index.php">{{ 'Go back to SimpleSAMLphp installation page'|trans }}</a></p>
     {% endif %}
 {% endblock %}
