Fix missing css-file

--- a/templates/post.twig
+++ b/templates/post.twig
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <link rel="icon" href="{{ asset("icons/favicon.ico") }}">
     <title>{% trans %}Sending message{% endtrans %}</title>
-    <link rel="stylesheet" href="{{ asset("css/post.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/postSubmit.css") }}">
     <script src="{{ asset("js/post.js") }}"></script>
   </head>
   <body>
