--- a/modules/admin/templates/logout.twig
+++ b/modules/admin/templates/logout.twig
@@ -6,7 +6,5 @@
     <br>
     <h3>{% trans %}You have been logged out.{% endtrans %}</h3>
     <br>
-    {% if text %}
-    <p><a href="index.php">{{ 'Go back to SimpleSAMLphp installation page'|trans }}</a></p>
-    {% endif %}
+    <p><a href="./">{{ 'Go back to SimpleSAMLphp installation page'|trans }}</a></p>
 {% endblock %}
