--- a/modules/admin/templates/federation.twig
+++ b/modules/admin/templates/federation.twig
@@ -13,7 +13,6 @@
     <h2>{% trans %}Hosted entities{% endtrans %}</h2>
       {%- for key, set in entries.hosted %}
         {%- if not loop.first %}
-
         <br/>
         {%- endif %}
         {%- embed "includes/expander.twig" %}
@@ -78,7 +77,13 @@
               {%- endif %}
 
                 <li>
-                  <a href="{{ cert.url }}"><i class="fa fa-download"></i>{{ cert.name | default('cert') }}
+                  {% if set.type == 'saml20-sp-hosted' %}
+                      {% set urlparams = {'set':set.type, 'source': set.authid, 'prefix':cert.prefix } %}
+                  {% else %}
+                      {% set urlparams = {'set':set.type, 'entity': set.entityid, 'prefix':cert.prefix } %}
+                  {% endif %}
+                  <a href="{{ moduleURL('admin/federation/cert', urlparams) }}">
+                    <i class="fa fa-download"></i>{{ cert.name | default('cert') }}
                     {#- #}{% if cert.signing %}-signing{% endif %}
                     {#- #}{% if cert.encryption %}-encryption{% endif %}.pem
                     {#- #}{% if cert.prefix %} ({% trans %}new{% endtrans %}){% endif %}</a>
