--- a/modules/core/templates/loginuserpass.twig
+++ b/modules/core/templates/loginuserpass.twig
@@ -110,9 +110,9 @@
             </div>
         </form>
     </div>
-    {% if links is defined -%}
+    {% if loginpage_links is defined -%}
     <ul>
-        {% for link in links -%}
+        {% for link in loginpage_links -%}
         <li><a href="{{ link.href }}">{{ link['text']|trans }}</a></li>
         {% endfor %}
     </ul>
