Correct host in generated URLS for IdPs with 'host' config in admin/federation
It gets quite fiddly to get this right. The actual metadata (hosted on
the `host` itself) is alreafy correct because the URL generator uses the
'current' entity metadata and current URL. The admin interface of course
presents all entities in one page and hence cannot rely on the current
URL. Therefore we need to override the url host for this specific
display case.

Closes: #1774

--- a/modules/admin/templates/federation.twig
+++ b/modules/admin/templates/federation.twig
@@ -21,7 +21,17 @@
           <dl>
             <dt>{{ set|entityDisplayName }}</dt>
 
-            <dd>EntityID: <code>{{ set.entityid }}</code></dd>
+            <dd>EntityID: <code>{{ set.entityid }}</code>
+            {% if set.type == 'saml20-idp-hosted' and set.host is defined %}
+                (hostname:
+                    {% if set.host == '__DEFAULT__' %}
+                        <em>{{ 'default'|trans }}</em>
+                    {%- else %}
+                        <code>{{ set.host }}</code>
+                    {%- endif -%}
+                )
+            {% endif %}
+            </dd>
             {%- if set.deprecated is defined and set.deprecated %}
 
               <dd><span class="entity-deprecated">{{ 'Deprecated'|trans }}</span></dd>
