--- a/modules/admin/public/assets/css/admin.css
+++ b/modules/admin/public/assets/css/admin.css
@@ -1,6 +1,5 @@
 .enablebox table {
   border: 1px solid #eee;
-
   margin-left: 1em;
 }
 
@@ -9,7 +8,7 @@
 }
 
 .enablebox tr td {
-  padding: .5px 1em 1px .5em;
+  padding: 0.5px 1em 1px 0.5em;
   margin: 0;
 }
 
@@ -38,7 +37,9 @@ dt {
   font-weight: bold;
 }
 
-.entity-name, .entity-deprecated, .entity-expired {
+.entity-name,
+.entity-deprecated,
+.entity-expired {
   font-weight: bold;
 }
 
