Rename checks heading to Checks

--- a/modules/admin/templates/config.twig
+++ b/modules/admin/templates/config.twig
@@ -50,7 +50,7 @@
 
     </ul>
 
-    <h2>{% trans %}Your PHP installation{% endtrans %}</h2>
+    <h2>{% trans %}Checks{% endtrans %}</h2>
     <div class="enablebox">
         <table>
         {%- for key, func in funcmatrix %}
